--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,8 +7,13 @@ phases:
   pre_build:
     commands:
       - echo pre build
+      - npm install aws-cdk-lib
+      - npm install -g aws-cdk
+      - cdk --version
   build:
     commands:
+      - npm install
+      - cdk synth
       - cdk deploy
   post_build:
     commands:
