--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,7 +14,7 @@ phases:
     commands:
       - npm install
       - cdk synth
-      - cdk deploy
+      - cdk deploy --require-approval never
   post_build:
     commands:
       - echo Build completed on `date`
