--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,8 +7,8 @@ phases:
   pre_build:
     commands:
       - echo pre build
-      - npm install aws-cdk-lib
-      - npm install -g aws-cdk
+      # - npm install aws-cdk-lib
+      # - npm install -g aws-cdk
       - cdk --version
   build:
     commands:
